# game-engine

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  build-win.bat  rbcopy.bat
dx_test/: CMakeLists.txt  Input.cpp  Input.h  helper.cpp  helper.h  main.cpp  shaders.hlsl
dx_test/resource/sub/: generate_skybox.ps1
dx_test/shader/: billboard.hlsl  blur.hlsl  light.hlsl  particle.hlsl  register.hlsl  shader_compile.ps1  shaders.hlsl  skybox.hlsl  terrain.hlsl
dx_test/src/: SimpleMath.h  blur.cpp  blur.h  common.h  constants.cpp  constants.h  debug.cpp  debug.h  directx_12.cpp  directx_12.h  dx_util.cpp  dx_util.h  pch.h  renderee.h  resource.cpp  resource.h  sampler.cpp  sampler.h  typeid.cpp  typeid.h
editor/: CMakeLists.txt
editor/src/: application.cpp  data.cpp  data.h
editor/src/common/: event.h  log.h
editor/src/data/: assets.cpp  assets.h  behaviour.cpp  behaviour.h  common.cpp  common.h  data.cpp  data.h  entity_data.cpp  entity_data.h  graphics.cpp  graphics.h  info_data.cpp  info_data.h  physics.cpp  physics.h  scene_data.cpp  scene_data.h  transform_data.cpp  transform_data.h
editor/src/event/: core.h  events.h
editor/src/gui/: common.cpp  common.h  entity_window.cpp  entity_window.h  gui.cpp  gui.h  helper.cpp  helper.h  log_window.cpp  log_window.h  scene.cpp  scene.h  scene_window.cpp  scene_window.h
editor/src/gui/asset/: asset_tabs.cpp  asset_tabs.h  asset_window.cpp  asset_window.h
editor/src/gui/entity/: entity_window.cpp  entity_window.h  tabs.cpp  tabs.h
engine/: CMakeLists.txt
engine/src/: pch.cpp  pch.h
engine/src/assets/: animation.h  asset.h  audio.h  font.h  mesh.h  registry.h  serializer.h  shader.h  texture.h  tilemap.h
engine/src/core/: aplication.cpp  application.h  dispatcher.h  entry.h  event.h  inputs.cpp  inputs.h  typeid.h
engine/src/directx/: common.h  directx_12.cpp  directx_12.h  dxtest.h
engine/src/ecs/: ecs.h  entity.h  registry.h  scene.h  serializer.h  system.h
engine/src/ecs/components/: behaviour.h  common.h  graphics.h  physics.h
engine/src/ecs/systems/: collision_system.h  directx_system.h  frame_animation_system.h  rigidbody_system.h  script_system.h  sprite_renderer_system.h  test_system.h  text_renderer_system.h  tilemap_renderer_system.h
engine/src/events/: system.h
engine/src/helpers/: yaml.h
engine/src/math/: random.h  vec2.h
engine/src/physics/: rigidbody2.h
engine/src/scripts/: pipe_spawner.h  player_controller.h  script_factory.cpp  script_factory.h  script_instance.h  scrolling_ground.h
game/: CMakeLists.txt
game/src/: game.cpp
game/src/scripts/: pipe_spawner.h  player_controller.h  scrolling_ground.h
imgui/docs/: FAQ.md
resource/: scene_b.yaml  shaders.hlsl
windows/libs/: DirectXTex.lib  yaml-cppd.lib
